service-mesh/yamls/servicea/servicea-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicea-gateway
  namespace: servicea
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: servicea
      protocol: HTTP
    hosts:
    - 'servicea.mesh.onap.eu'
