service-mesh/yamls/servicea/servicea-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
  namespace: servicea
spec:
  hosts:
  - servicea.mesh.onap.eu
  gateways:
  - gateway
  http:
    - route:
      - destination:
          port:
            number: 80
          host: servicea
